# mercury

./: README.md  package.json  pyproject.toml
config/: settings.py
mercury/core/: apps.py
mercury/core/management/commands/: makesuperuser.py
mercury/templates/: base.html
mercury/users/: apps.py
